Fix size and alignment of several older icons

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -191,7 +191,7 @@
 .bibtex-icon        { .file-icons; content: "\e601"; font-size: 16px; .thicken; }
 .bluespec-icon      { .file-icons; content: "\e93c"; font-size: 12px; top: 1px; left: 1px; }
 .boo-icon           { .file-icons; content: "\e939"; font-size: 15px; }
-.boot-icon          { .file-icons; content: "\f103"; left: 2px; }
+.boot-icon          { .file-icons; content: "\f103"; font-size: 16px; }
 .brain-icon         { .file-icons; content: "\e93a"; font-size: 15px; }
 .bro-icon           { .file-icons; content: "\e93b"; font-size: 16px; top: 3px; }
 .broccoli-icon      { .file-icons; content: "\e922"; font-size: 14px; }
@@ -208,7 +208,7 @@
 .clean-icon         { .file-icons; content: "\e95b"; font-size: 16px; }
 .click-icon         { .file-icons; content: "\e95c"; font-size: 15px; }
 .clips-icon         { .file-icons; content: "\e940"; font-size: 18px; left: 2px; }
-.cljs-icon          { .file-icons; content: "\f104"; }
+.cljs-icon          { .file-icons; content: "\f104"; font-size: 15px; }
 .cmake-icon         { .file-icons; content: "\e93f"; font-size: 14px; top: 1px; }
 .composer-icon      { .file-icons; content: "\e683"; font-size: 17px; }
 .coq-icon           { .file-icons; content: "\e95f"; font-size: 16px; left: 1px; }
@@ -226,7 +226,7 @@
 .eagle-icon         { .file-icons; content: "\e965"; font-size: 15px; }
 .ecere-icon         { .file-icons; content: "\e966"; font-size: 16px; top: 3px; }
 .eiffel-icon        { .file-icons; content: "\e967"; font-size: 16px; }
-.elm-icon           { .file-icons; content: "\f102"; }
+.elm-icon           { .file-icons; content: "\f102"; font-size: 15px; }
 .em-icon            { .file-icons; content: "\e968"; font-size: 16px; top: 3px; }
 .emacs-icon         { .file-icons; content: "\e926"; font-size: 15px; }
 .eslint-icon        { .file-icons; content: "\e90e"; font-size: 14px; left: 1px; }
@@ -268,14 +268,14 @@
 .inno-icon          { .file-icons; content: "\e985"; font-size: 15px; }
 .io-icon            { .file-icons; content: "\e981"; font-size: 13px; .thicken; top: 1px; }
 .ioke-icon          { .file-icons; content: "\e982"; font-size: 15px; }
-.ionic-icon         { .file-icons; content: "\f14b"; font-size: 18px; left: 1px; }
+.ionic-icon         { .file-icons; content: "\f14b"; font-size: 15px; }
 .isabelle-icon      { .file-icons; content: "\e945"; font-size: 16px; }
 .j-icon             { .file-icons; content: "\e937"; font-size: 13px; }
 .jade-icon          { .file-icons; content: "\e90d"; font-size: 12px; top: 1px; }
 .jake-icon          { .file-icons; content: "\e948"; font-size: 16px; }
 .jinja-icon         { .file-icons; content: "\e944"; font-size: 15px; }
 .jsonld-icon        { .file-icons; content: "\e958"; font-size: 17px; top: 3px; }
-.jsx-icon           { .file-icons; content: "\f101"; left: -3px; }
+.jsx-icon           { .file-icons; content: "\f101"; font-size: 14px; }
 .jupyter-icon       { .file-icons; content: "\e987"; font-size: 16px; top: 3px; }
 .kivy-icon          { .file-icons; content: "\e901"; font-size: 15px; }
 .kotlin-icon        { .file-icons; content: "\e989"; font-size: 14px; }
@@ -283,7 +283,7 @@
 .labview-icon       { .file-icons; content: "\e98a"; font-size: 16px; }
 .lasso-icon         { .file-icons; content: "\e98c"; font-size: 15px; left: 1px; top: 1px; }
 .lean-icon          { .file-icons; content: "L";     font-size: 14px; left: 1px; top: 1px; }
-.lein-icon          { .file-icons; content: "\f105"; left: 3px; }
+.lein-icon          { .file-icons; content: "\f105"; font-size: 16px; }
 .lfe-icon           { .file-icons; content: "\e94c"; font-size: 15px; }
 .lisp-icon          { .file-icons; content: "\e908"; font-size: 12px; top: 1px; }
 .llvm-icon          { .file-icons; content: "\e91d"; font-size: 17px; }
@@ -308,7 +308,7 @@
 .modula2-icon       { .file-icons; content: "\e996"; font-size: 15px; }
 .monkey-icon        { .file-icons; content: "\e997"; font-size: 18px; top: 4px; left: -1px; }
 .netlogo-icon       { .file-icons; content: "\e99c"; font-size: 15px; top: 3px; left: 1px; }
-.nginx-icon         { .file-icons; content:"\f146b"; font-size: 15px; left: 1px; }
+.nginx-icon         { .file-icons; content:"\f146b"; font-size: 15px; }
 .nimrod-icon        { .file-icons; content: "\e998"; font-size: 15px; }
 .nit-icon           { .file-icons; content: "\e999"; font-size: 15px; }
 .nix-icon           { .file-icons; content: "\e99a"; font-size: 16px; top: 3px; }
@@ -355,7 +355,7 @@
 .racket-icon        { .file-icons; content: "\e9b1"; font-size: 15px; left: 1px; }
 .raml-icon          { .file-icons; content: "\e913"; font-size: 14px; }
 .rdoc-icon          { .file-icons; content: "\e9b0"; font-size: 15px; }
-.react-icon         { .file-icons; content: "\f100"; top: 3px; left: -2px; }
+.react-icon         { .file-icons; content: "\f100"; font-size: 15px; top: 3px; }
 .realbasic-icon     { .file-icons; content: "\e9af"; font-size: 15px; }
 .rebol-icon         { .file-icons; content: "\e9ae"; font-size: 13px; top: 1px; }
 .red-icon           { .file-icons; content: "\e9ad"; font-size: 16px; top: 3px; }
